--- a/flex/04-flex-information/index copy.html
+++ b/flex/04-flex-information/index copy.html
@@ -8,29 +8,31 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<div class="title">Information!</div>
+		<div class="title">Title!</div>
 
 		<div class="infogroup">
 			<div class="imagegroup">
-				<img src="./images/barberry.png" alt="barberry" />
-				<div class="text">This is a type of plant. We love this one.</div>
+				<img src="./images/image1.png" alt="image1" />
+				<div class="text">image</div>
 			</div>
 
 			<div class="imagegroup">
-				<img src="./images/chilli.png" alt="chili" />
-				<div class="text">This is another type of plant. Isn't it nice?</div>
+				<img src="./images/image2.png" alt="image2" />
+				<div class="text">image</div>
 			</div>
 
 			<div class="imagegroup">
-				<img src="./images/pepper.png" alt="pepper" />
-				<div class="text">We have so many plants. Yay plants.</div>
+				<img src="./images/image3.png" alt="image3" />
+				<div class="text">image</div>
 			</div>
+
 			<div class="imagegroup">
-				<img src="./images/saffron.png" alt="saffron" />
-				<div class="text">I'm running out of things to say about plants.</div>
+				<img src="./images/image4.png" alt="image4" />
+				<div class="text">image</div>
 			</div>
 		</div>
 
+		d
 		<!-- disregard this section, it's here to give attribution to the creator of these icons -->
 		<div class="footer">
 			<div>
